--- a/eCommerceProject.Infrastructure/eCommerceProject.Infrastructure.csproj
+++ b/eCommerceProject.Infrastructure/eCommerceProject.Infrastructure.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="Stripe.net" Version="49.1.0" />
   </ItemGroup>
 
   <ItemGroup>
